cabal-version:      2.4
name:               HMock
version:            0.1.0.0
synopsis:           A flexible mock framework for testing effectful code.
description:        HMock is a flexible mock framework for testing effectful
                    code in Haskell.  Tests can set up expectations about
                    actions that can or should be performed and their results,
                    and then verify those expectations when the test is
                    complete.
                    .
                    For more information, see the module documentation for
                    "Test.HMock".
category:           Testing
homepage:           https://github.com/cdsmith/HMock
bug-reports:        https://github.com/cdsmith/HMock/issues
license:            BSD-3-Clause
license-file:       LICENSE

author:             Chris Smith <cdsmith@gmail.com>
maintainer:         Chris Smith <cdsmith@gmail.com>

extra-source-files: CHANGELOG.md

tested-with:        GHC == 8.4.4 || == 8.6.5 || == 8.8.4 || == 8.10.4 || == 9.0.1

source-repository head
    type:     git
    location: git://github.com/cdsmith/HMock.git

library
    exposed-modules:  Test.HMock,
                      Test.HMock.TH,
                      Test.HMock.Internal.Multiplicity,
                      Test.HMock.Internal.MockT,
                      Test.HMock.Internal.ExpectSet,
                      Test.HMock.Internal.Expectable,
                      Test.HMock.Internal.Mockable,
                      Test.HMock.Internal.Predicates,
                      Test.HMock.Internal.TH,
                      Test.HMock.Internal.TH.Util,
                      Test.HMock.Internal.Util
    build-depends:    base >=4.11.0 && < 4.16,
                      constraints >= 0.13 && < 0.14,
                      containers >= 0.6.2 && < 0.7,
                      data-default >= 0.7.1 && < 0.8,
                      exceptions >= 0.10.4 && < 0.11,
                      extra >= 1.7.9 && < 1.8,
                      monad-control >= 1.0.2 && < 1.1,
                      mono-traversable >= 1.0.15 && < 1.1,
                      mtl >= 2.2.2 && < 2.3,
                      regex-tdfa >= 1.3.1 && < 1.4,
                      syb >= 0.7.2 && < 0.8,
                      template-haskell >= 2.13.0 && < 2.18,
                      transformers-base >= 0.4.5 && < 0.5,
                      unliftio >= 0.2.18 && < 0.3,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Wincomplete-uni-patterns

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Classes,
                      Core,
                      Demo,
                      DocTests.All,
                      DocTests.Test.HMock.Internal.Multiplicity,
                      DocTests.Test.HMock.Internal.Predicates,
                      ExpectSet,
                      Extras,
                      PolysemyTest,
                      QuasiMock,
                      TH,
                      Util.DeriveRecursive,
                      Util.TH
    build-depends:    HMock,
                      QuickCheck,
                      base,
                      containers,
                      data-default,
                      deepseq,
                      directory,
                      doctest-exitcode-stdio,
                      doctest-lib,
                      exceptions,
                      extra,
                      hspec,
                      mtl,
                      polysemy,
                      polysemy-plugin,
                      syb,
                      template-haskell,
                      unliftio
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -Wall -Wcompat -Wincomplete-uni-patterns -Wno-orphans
