cabal-version:      2.4
name:               HMock
version:            0.5.1.2
synopsis:           A flexible mock framework for testing effectful code.
description:        HMock is a flexible mock framework for testing effectful
                    code in Haskell.  Tests can set up expectations about
                    actions that can or should be performed and their results,
                    and then verify those expectations when the test is
                    complete.
                    .
                    For more information, see the module documentation for
                    "Test.HMock".
category:           Testing
homepage:           https://github.com/cdsmith/HMock
bug-reports:        https://github.com/cdsmith/HMock/issues
license:            BSD-3-Clause
license-file:       LICENSE

author:             Chris Smith <cdsmith@gmail.com>
maintainer:         Chris Smith <cdsmith@gmail.com>

extra-source-files: CHANGELOG.md, README.md

tested-with:        GHC == 8.6.5 || == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.8 || == 9.4.5 || == 9.6.2 || == 9.8.1

source-repository head
    type:     git
    location: git://github.com/cdsmith/HMock.git

library
    exposed-modules:  Test.HMock,
                      Test.HMock.ExpectContext,
                      Test.HMock.Mockable,
                      Test.HMock.MockMethod,
                      Test.HMock.MockT,
                      Test.HMock.Multiplicity,
                      Test.HMock.Rule,
                      Test.HMock.TH,
                      Test.HMock.Internal.ExpectSet,
                      Test.HMock.Internal.Rule,
                      Test.HMock.Internal.State,
                      Test.HMock.Internal.Step,
                      Test.HMock.Internal.TH,
                      Test.HMock.Internal.Util
    build-depends:    base >=4.11.0 && < 4.20,
                      constraints >= 0.13 && < 0.15,
                      containers >= 0.6.2 && < 0.8,
                      data-default >= 0.7.1 && < 0.8,
                      exceptions >= 0.10.4 && < 0.11,
                      explainable-predicates >= 0.1 && < 0.2,
                      extra >= 1.7.9 && < 1.8,
                      monad-control >= 1.0.2 && < 1.1,
                      mtl >= 2.2.2 && < 2.4,
                      stm >= 2.5.0 && < 2.6,
                      syb >= 0.7.2 && < 0.8,
                      template-haskell >= 2.14 && < 2.22,
                      transformers-base >= 0.4.5 && < 0.5,
                      unliftio >= 0.2.18 && < 0.3,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Wincomplete-uni-patterns

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Classes,
                      Core,
                      Demo,
                      DocTests.All,
                      DocTests.Test.HMock.Multiplicity,
                      ExpectSet,
                      Multiplicity,
                      QuasiMock,
                      QuasiMockBase,
                      TH,
                      Util.DeriveRecursive
    build-depends:    HMock,
                      QuickCheck,
                      base,
                      containers,
                      data-default,
                      deepseq,
                      directory,
                      doctest-exitcode-stdio,
                      doctest-lib,
                      exceptions,
                      explainable-predicates,
                      extra,
                      hspec,
                      mtl,
                      syb,
                      template-haskell,
                      unliftio
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -Wall -Wcompat -Wincomplete-uni-patterns -Wno-orphans
