cabal-version:      2.4
name:               HMock
version:            0.1.0.0
synopsis:           A flexible mock framework for unit testing effectful code.
description:        A flexible mock framework for unit testing effectful code.
                    Tests can set up expectations about actions that can or
                    should be performed and their results, and then verify those
                    expectations when the test is complete.
                    .
                    For more information, see the module documentation for
                    "Test.HMock".
category:           Testing
homepage:           N/A
bug-reports:        N/A
license:            BSD-3-Clause
license-file:       LICENSE

author:             Chris Smith <cdsmith@gmail.com>
maintainer:         Chris Smith <cdsmith@gmail.com>

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Test.HMock,
                      Test.HMock.TH
    other-modules:    Test.HMock.Internal.Cardinality,
                      Test.HMock.Internal.Core,
                      Test.HMock.Internal.Predicates,
                      Test.HMock.Internal.TH,
                      Test.HMock.Internal.TH.Util,
                      Test.HMock.Internal.Util
    build-depends:    base ^>=4.14.1.0,
                      constraints,
                      data-default,
                      exceptions,
                      extra,
                      monad-control,
                      mtl,
                      syb,
                      template-haskell,
                      transformers-base,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wincomplete-uni-patterns

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Classes,
                      Core,
                      Extras,
                      QuasiMock,
                      THUtil
    build-depends:    base ^>=4.14.1.0,
                      data-default,
                      deepseq,
                      directory,
                      extra,
                      HMock,
                      hspec,
                      mtl,
                      syb,
                      template-haskell,
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -Wincomplete-uni-patterns -Wno-orphans
