cabal-version:      2.4
name:               HMock
version:            0.1.0.0
synopsis:           A flexible mock framework for unit testing effectful code.
description:        A flexible mock framework for unit testing effectful code.
                    Tests can set up expectations about actions that can or
                    should be performed and their results, and then verify those
                    expectations when the test is complete.
                    .
                    For more information, see the module documentation for
                    "Test.HMock".
category:           Testing
homepage:           N/A
bug-reports:        N/A
license:            BSD-3-Clause
license-file:       LICENSE

author:             Chris Smith <cdsmith@gmail.com>
maintainer:         Chris Smith <cdsmith@gmail.com>

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Test.HMock,
                      Test.HMock.TH
    other-modules:    Test.HMock.Internal.Multiplicity,
                      Test.HMock.Internal.Core,
                      Test.HMock.Internal.Predicates,
                      Test.HMock.Internal.TH,
                      Test.HMock.Internal.TH.Util,
                      Test.HMock.Internal.Util
    build-depends:    base >=4.12.0 && < 4.16,
                      constraints >= 0.13 && < 0.14,
                      template-haskell >= 2.14.0 && < 2.18,
                      mtl >= 2.2.2 && < 2.3,
                      data-default >= 0.7.1 && < 0.8,
                      exceptions >= 0.10.4 && < 0.11,
                      extra >= 1.7.9 && < 1.8,
                      monad-control >= 1.0.2 && < 1.1,
                      transformers-base >= 0.4.5 && < 0.5,
                      syb >= 0.7.2 && < 0.8,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wincomplete-uni-patterns

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    Classes,
                      Core,
                      Extras,
                      QuasiMock,
                      THUtil
    build-depends:    base,
                      data-default,
                      deepseq,
                      directory,
                      extra,
                      HMock,
                      hspec,
                      mtl,
                      syb,
                      template-haskell,
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -Wincomplete-uni-patterns -Wno-orphans
